--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@ Opera, Safari</a>
           <li class="links__link">
             <p class="links__title">Стэк технологий</p>
             <a class="linsk__link"> HTML, CSS, JS,
-MySQL, REST, SOAP, JSON</a>
+Postgre SQL, API REST, SOAP, JSON</a>
           </li>
           <li class="links__link">
             <p class="links__title">Инструменты</p>
             <a class="linsk__link">Jira,
-Confluence,Postman,
+Confluence, Postman,
 SoapUI, Swagger, DevTools, Charles,
-Kibana, Docker, Git, Figma, Photoshop</a>
+Kibana, DBeaver, Metabase, Git </a>
           </li>
         </ul>
       </section>
